# ai-mlops-template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release-container.yml
docs/: ARCHITECTURE.md  OPERATIONS.md  api.rst  architecture.rst  conf.py  index.rst  operations.rst  quickstart.rst  reference.rst
src/mlops_template/: api.py  config.py  schema.py  train.py
tests/: test_api.py  test_training.py
