[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-mlops-template"
version = "0.1.0"
description = "Template for reproducible ML training, versioning and serving"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Your Name"}]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "numpy>=1.26",
  "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "httpx>=0.27",
]
docs = ["sphinx>=7.4"]
tracking = ["mlflow>=2.15"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_decorators = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
